# cl1-biomarker-benchmark

./: README.md  pyproject.toml
artifacts/: dataset.csv  metrics.json  summary.md
configs/: experiment.temporal_patterns.yaml
scripts/: run_benchmark.py
src/cl_biomarkers_benchmark/: __init__.py
src/cl_biomarkers_benchmark/adapters/: cortical_sdk_adapter.py  synthetic_adapter.py
src/cl_biomarkers_benchmark/analysis/: biomarkers.py  dataset_builder.py
src/cl_biomarkers_benchmark/benchmarks/: experiment.py
src/cl_biomarkers_benchmark/ml/: baselines.py  metrics.py
src/cl_biomarkers_benchmark/reporting/: report.py
src/cl_biomarkers_benchmark/utils/: config.py
